[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/textures/generatorBase.png" type="Texture" id=1]
[ext_resource path="res://subScenes/ArrowSprites.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/generatorBase.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/zapsplat_cartoon_pop_mouth.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/inspiraci√≥.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "ingotCreation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.875, 0.875 ), Vector2( 0.75, 0.75 ), Vector2( 0.625, 0.625 ), Vector2( 1, 1 ), Vector2( 1.125, 1.125 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 8, 8 ), Vector2( 16, 16 ), Vector2( 24, 24 ), Vector2( 9.53674e-07, 9.53674e-07 ), Vector2( -8, -8 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.105677, 0.371491 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.8, 64 )

[sub_resource type="Curve2D" id=3]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array(  )
}

[node name="RigidBody2D" type="RigidBody2D" groups=[
"generators",
"orientableTile",
]]
z_index = 1
collision_layer = 0
collision_mask = 0
mode = 1
mass = 65535.0
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -7.68653, -7.68653 )
scale = Vector2( 1.1201, 1.1201 )
texture = ExtResource( 1 )
offset = Vector2( 64, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/ingotCreation = SubResource( 1 )

[node name="GenerateRessourceTimer" type="Timer" parent="Sprite/AnimationPlayer"]
wait_time = 5.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sprite"]
stream = ExtResource( 4 )
volume_db = 5.0
max_distance = 1.0
attenuation = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 64, 64 )
scale = Vector2( 5, 1 )
shape = SubResource( 2 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotate = false

[node name="generation" type="Timer" parent="."]
autostart = true

[node name="ArrowSprites" parent="." instance=ExtResource( 2 )]

[node name="AutoUpdateTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true
[connection signal="timeout" from="Sprite/AnimationPlayer/GenerateRessourceTimer" to="." method="_on_GenerateRessourceTimer_timeout"]
[connection signal="timeout" from="generation" to="." method="_on_generation_timeout"]
[connection signal="timeout" from="AutoUpdateTimer" to="." method="_on_AutoUpdateTimer_timeout"]

[editable path="ArrowSprites"]
